--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.05.2022 15:11:19</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.05.2022 07:15:22</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 03. 05. 2022</h5>
+<h5>Středa, 04. 05. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Hrášková</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 3.5.2022</div>
+<div class="nadpis">Středa 4.5.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s tvarohem, jahodami a drobenkou </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ořechový koláč</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Mrkvový dort</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Zelná polévka s uzeným masem, zakysaná smetana, pažitka - v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Zelná polévka s uzeným masem, zakysaná smetana, pažitka - samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí stroganov, nakládaná okurka, restované žampiony, rýže, zakysaná smetana <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí prso zapečené s mozzarellou a rajčaty, bazalková omáčka, bulgur <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Květákové žluté curry, restovaná pohanka, baby špenát, černý sezam <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,13 +63,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Brokolicový krém se šlehačkou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramboračka s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Medailonky z vepřové pečeně v sýrovém těstíčku, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na roštu s kukuřicí a pórkem, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g 150g Dorůžova pečená vepřová panenka, petrželová salsa s rajčaty a červenou cibulí, mrkvové pyré, parmazánový chips</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rizoto z vepřového masa se zeleninou, strouhaný sýr, kyselá okurka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na smetanové omáčce s houbami, špecle</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná česnekovým dresinkem, trhanými listy salátů, zeleninou a  vepřovou panenkou, smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny s citronovým dresinkem, medailonky z kuřecích prsou, parmazán, vařené vejce</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Staropramen 0,5L 11° se slevou 11,-Kč na půllitr pro naše stálé sledující po celý den neomezeně (instacena platí celý květen)</td><td class="menuPrice">32,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka </td><td class="menuPrice">27,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, vídeňská cibule</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny vřetena</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na roštu s volským okem na šunce, smažené hranolky, tatarka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše, vepřové klobásy na roštu s medvědím česnekem, volské oko, kyselé okurka, škvarky s cibulí</td><td class="menuPrice">142,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z vepřové pečeně s barevným pepřem, celerové pyré s máslem, opečená anglická slanina, parmazán</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z krůtích prsou, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">750g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, hořčice, cibule, křen, beraní roh, grilované brambory</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, do růžova pečená vepřová panenka, vařené vejce</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Staropramen 0,5L 11° se slevou 11,-Kč na půllitr pro naše stálé sledující po celý den neomezeně (instacena platí celý květen)</td><td class="menuPrice">32,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 11° - Šenkýř ALE</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka </td><td class="menuPrice">27,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -117,65 +74,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">120 g</td>
-<td class="title">Smažené králičí krokety, trhaný salát, ředkvičky, chřest,
-dijonská majonéza, toast 1a,3,7,10</td>
-<td class="pricem">179 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Chřestový krém s vaječnou sedlinou 1a,3,7</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Dušená vepřová líčka, tarhoňa s hráškem, blanšírovaný chřest 1a,3,7</td>
-<td class="pricem">209 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Vařený chřest s holandskou omáčkou, zastřené vejce,
-brambory Grenaille 1a,3,7,10,12</td>
-<td class="pricem">199 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Čokoládové brownies s marinovanými višněmi a šlehačkou 1a,3,7,8</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Malina<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový<br/>
-gin / zázvorový tonik / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Hrachová s uzeninou a chlebovými krutony 1ab</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřové výpečky s červeným zelím, našimi bramborovými knedlíky a vídeňskou cibulkou 1a,3,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Gratinovaný kuřecí steak rajčaty a mozzarellou s opečenými brambory, bazalkovou majonézou a trhaným salátem 1a,3,7,10</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Telecí játra na anglické slanině s dušenou rýží 1a</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
