--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.05.2022 09:36:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.05.2022 10:15:35</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -127,7 +127,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a petrzelkovym pestem, cockovy salat s paprikami, cerstvou zeleninou a bambusovymi vyhonky 145</li><li>Pecene velke cerstve spanelske sardinky s pecenymi rajcaty a petrzelkovym pestem, cockovy salat s pecenymi rajcaty a petrzelkovym pestem, cockovy salat s paprikami, cerstvou zeleninou a bambusovymi vyhonky 175</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a garam masala, jasminova ryze, salatek 145</li><li>Pecena koroptvi prsicka plnena listovym spenatem s ovcim syrem, stouchane brambory s porkem a creme fraiche, salatek 175</li><li>Indicka pakora {cizrnove smazenky} s kvetakem, dyni, pak coj, cibulkou a panc phoron, pohanka, jogurtovy dip, salatek 145</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a petrzelkovym pestem, cockovy salat s paprikami, cerstvou zeleninou a bambusovymi vyhonky 145</li><li>Pecene velke cerstve spanelske sardinky s pecenymi rajcaty a petrzelkovym pestem, cockovy salat s pecenymi rajcaty a petrzelkovym pestem, cockovy salat s paprikami, cerstvou zeleninou a bambusovymi vyhonky 175</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami a garam masala, jasminova ryze, salatek 145</li><li>Pecena koroptvi prsicka plnena listovym spenatem s ovcim syrem, stouchane brambory s porkem a creme fraiche, salatek 175</li><li>Indicka pakora {cizrnove smazenky} s kvetakem, dyni, pak coj a panc phoron, pohanka, jogurtovy dip, salatek 145</li></ol>
 </td>
 </tr>
 </table>
